--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,127 @@
 #app {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
+  font-family: Calibri;
+  font-size: 14.5px;
+  color: black;
+}
+
+.msg-wrapper {
+  white-space: pre-wrap;
+  text-align: center;
+}
+
+.options_container {
+  padding-top: 1rem;
+  height: fit-content;
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 1rem
+}
+
+.content {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  width: 100vw;
+}
+
+.input_container {
+  display: flex;
+  gap: 1rem;
+  text-align: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 20%;
+  width: 100vw;
+}
+
+.input_field {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  height: 20%;
+  gap: 1rem;
+}
+
+.little-prompt {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+}
+
+.button_container {
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  padding: 1rem;
+  width: 100vw;
+  /* flex-direction: row; */
+  /* flex-wrap: wrap; */
+  /* height: 10%; */
+}
+
+.buttons {
+  border: 1px solid black;
+}
+
+.button {
+  border: 1px solid black;
+  height: 3rem;
+  position: fixed;
+  bottom: 4rem;
+  width: 100vw;
+  background-color: darkslategray;
+  color: white;
+}
+
+.buttons:hover,
+.button:hover {
+  border: 1px solid black;
+  background: lightblue
+}
+
+.selectedButton {
+  border: 2px solid black;
+  background-color: lightblue;
+}
+
+.hidden {
+  display: none;
+}
+
+@media (max-width: 700px) {
+  .button_container {
+    flex-wrap: wrap;
+    height: 10%;
+    /* width: fit-content; */
+  }
+
+  .options_container {
+    flex-direction: row;
+  }
+
+  .input_field {
+    height: 20%;
+    gap: 0rem;
+  }
+
+  .input_container {
+    height: 20%;
+    gap: 1rem;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+  }
+
+  .extra_options {
+    height: 100vh;
+    padding: 1rem;
+    gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
 }
