--- a/src/app.css
+++ b/src/app.css
@@ -59,6 +59,7 @@
   justify-content: center;
   padding: 1rem;
   width: 100vw;
+  color: black;
   /* flex-direction: row; */
   /* flex-wrap: wrap; */
   /* height: 10%; */
