--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,24 @@
   color: black;
 }
 
+.app_container {
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  gap: 1rem;
+  top: 2rem;
+}
+
+.app_buttons {
+  border: 1px solid black;
+}
+
+.selected_app_button {
+  background-color: darkslategray;
+  color: white;
+}
+
 .msg-wrapper {
   white-space: pre-wrap;
   text-align: center;
@@ -12,14 +30,15 @@
 .options_container {
   padding-top: 1rem;
   height: fit-content;
-  position: fixed;
-  top: 0;
+  /* position: fixed;
+  top: 0; */
   width: 100vw;
   /* height: 100vh; */
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 1rem
+  gap: 1rem;
+  overflow-x: hidden;
 }
 
 .content {
@@ -81,7 +100,8 @@
 }
 
 .buttons:hover,
-.button:hover {
+.button:hover,
+.app_buttons:hover {
   border: 1px solid black;
   background: lightblue
 }
