--- a/src/app.css
+++ b/src/app.css
@@ -5,21 +5,23 @@
 }
 
 .app_container {
-  width: 100vw;
+  width: 90vw;
+  margin: 1rem;
   display: flex;
-  justify-content: center;
   position: fixed;
   gap: 1rem;
-  top: 2rem;
+  top: 0;
 }
 
 .app_buttons {
   border: 1px solid black;
+  width: 9rem;
 }
 
 .selected_app_button {
   background-color: darkslategray;
   color: white;
+  width: 9rem;
 }
 
 .msg-wrapper {
@@ -84,17 +86,20 @@
   /* height: 10%; */
 }
 
+
 .buttons {
   border: 1px solid black;
+  width: 210px;
 }
 
 .button {
   border: 1px solid black;
   height: 3rem;
   position: fixed;
-  bottom: 4rem;
+  bottom: 1rem;
   left: 10vw;
   width: 80vw;
+  /* margin: 0 auto; */
   background-color: darkslategray;
   color: white;
 }
@@ -107,12 +112,18 @@
 }
 
 .selectedButton {
-  border: 2px solid black;
+  border: 1px solid black;
   background-color: lightblue;
+  width: 210px;
+
 }
 
 .hidden {
   display: none;
+}
+
+.formatText {
+  white-space: pre-wrap;
 }
 
 @media (max-width: 700px) {
@@ -139,8 +150,8 @@
   }
 
   .extra_options {
-    height: 100vh;
-    padding: 1rem;
+    /* height: 100vh; */
+    /* padding: 1rem; */
     gap: 1rem;
     display: flex;
     flex-direction: column;
