--- a/src/app.css
+++ b/src/app.css
@@ -9,7 +9,9 @@
   margin: 1rem;
   display: flex;
   position: fixed;
+  justify-content: center;
   gap: 1rem;
+  left: 5vw;
   top: 0;
 }
 
@@ -156,5 +158,9 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+  }
+
+  .app_container {
+    left: 0;
   }
 }
