--- a/src/app.css
+++ b/src/app.css
@@ -57,6 +57,39 @@
   overflow-x: hidden;
 }
 
+.add_equipment {
+  display: flex;
+  align-items: center;
+  gap: 10px; 
+  margin-top: 10px;
+}
+
+.equipment_container {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 10rem;
+  align-self: center;
+  text-align: center;
+}
+
+.equipment_selection {
+  align-self: center;
+  display: flex;
+  align-items: center; 
+  justify-content: center; 
+  text-align: center;
+  gap: 1rem;
+  
+}
+.equipment_inputs {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  gap: 1rem;
+  align-self: center;
+}
+
 .content {
   display: flex;
   text-align: center;
