--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,13 @@
+/* Global Styles */
 #app {
-  font-family: Calibri;
+  font-family: Calibri, sans-serif;
   font-size: 14.5px;
   color: black;
 }
 
-.app_container {
+/* Layout Containers */
+.app_container,
+.header {
   width: 90vw;
   margin: 1rem;
   display: flex;
@@ -16,18 +19,14 @@
 }
 
 .header {
-  width: 90vw;
   height: fit-content;
-  margin: 1rem;
-  display: flex;
-  position: fixed;
-  justify-content: center;
-  gap: 1rem;
-  left: 5vw;
-  top: 0;
 }
 
-.app_buttons {
+/* Buttons */
+.app_buttons,
+.selected_app_button,
+.buttons,
+.button {
   border: 1px solid black;
   width: 9rem;
 }
@@ -35,75 +34,60 @@
 .selected_app_button {
   background-color: darkslategray;
   color: white;
-  width: 9rem;
+}
+
+.buttons {
+  width: 210px;
+}
+
+.button {
+  height: 3rem;
+  position: fixed;
+  bottom: 1rem;
+  left: 10vw;
+  width: 80vw;
+  background-color: darkslategray;
+  color: white;
+}
+
+.buttons:hover,
+.button:hover,
+.app_buttons:hover {
+  background: lightblue;
+}
+
+.selectedButton {
+  background-color: lightblue;
+  width: 210px;
+}
+
+/* Text Formatting */
+.msg-wrapper,
+.formatText {
+  white-space: pre-wrap;
 }
 
 .msg-wrapper {
-  white-space: pre-wrap;
   text-align: center;
 }
 
+/* Options and Inputs */
 .options_container {
   padding-top: 1rem;
   height: fit-content;
-  /* position: fixed;
-  top: 0; */
   width: 100vw;
-  /* height: 100vh; */
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   gap: 1rem;
   overflow-x: hidden;
-}
-
-.add_equipment {
-  display: flex;
-  align-items: center;
-  gap: 10px; 
-  margin-top: 10px;
-}
-
-.equipment_container {
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  height: 10rem;
-  align-self: center;
-  text-align: center;
-}
-
-.equipment_selection {
-  align-self: center;
-  display: flex;
-  align-items: center; 
-  justify-content: center; 
-  text-align: center;
-  gap: 1rem;
-  
-}
-.equipment_inputs {
-  display: flex;
-  flex-direction: row;
-  text-align: center;
-  gap: 1rem;
-  align-self: center;
-}
-
-.content {
-  display: flex;
-  text-align: center;
-  flex-direction: column;
-  width: 100vw;
 }
 
 .input_container {
   display: flex;
   gap: 1rem;
-  text-align: center;
   justify-content: center;
+  text-align: center;
   flex-wrap: wrap;
-  height: 20%;
   width: 100vw;
 }
 
@@ -111,7 +95,6 @@
   width: fit-content;
   display: flex;
   flex-direction: column;
-  height: 20%;
   gap: 1rem;
 }
 
@@ -127,57 +110,58 @@
   justify-content: center;
   padding: 1rem;
   width: 100vw;
-  color: black;
-  /* flex-direction: row; */
-  /* flex-wrap: wrap; */
-  /* height: 10%; */
 }
 
-
-.buttons {
-  border: 1px solid black;
-  width: 210px;
+/* Equipment Styles */
+.add_equipment {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  margin-top: 10px;
 }
 
-.button {
-  border: 1px solid black;
-  height: 3rem;
-  position: fixed;
-  bottom: 1rem;
-  left: 10vw;
-  width: 80vw;
-  /* margin: 0 auto; */
-  background-color: darkslategray;
-  color: white;
+.equipment_container {
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 10rem;
+  align-self: center;
+  text-align: center;
 }
 
-.buttons:hover,
-.button:hover,
-.app_buttons:hover {
-  border: 1px solid black;
-  background: lightblue
+.equipment_selection {
+  align-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
 }
 
-.selectedButton {
-  border: 1px solid black;
-  background-color: lightblue;
-  width: 210px;
-
+.equipment_inputs {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  align-self: center;
+  text-align: center;
 }
 
+/* Content Section */
+.content {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100vw;
+}
+
+/* Utility Classes */
 .hidden {
   display: none;
 }
 
-.formatText {
-  white-space: pre-wrap;
-}
-
+/* Media Queries */
 @media (max-width: 700px) {
   .button_container {
     flex-wrap: wrap;
-    height: 10%;
-    /* width: fit-content; */
   }
 
   .options_container {
@@ -185,20 +169,15 @@
   }
 
   .input_field {
-    height: 20%;
-    gap: 0rem;
+    gap: 0;
   }
 
   .input_container {
-    height: 20%;
     gap: 1rem;
-    /* flex-direction: column; */
     flex-wrap: wrap;
   }
 
   .extra_options {
-    /* height: 100vh; */
-    /* padding: 1rem; */
     gap: 1rem;
     display: flex;
     flex-direction: column;
